# screen-space-godrays

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
assets/shaders/basic/: fragment.glsl  vertex.glsl
assets/shaders/phong/: fragment.glsl  vertex.glsl
assets/shaders/post_process/: fragment.glsl  vertex.glsl
assets/shaders/shadow_map/: fragment.glsl  vertex.glsl
cmake/: fetchdependencies.cmake
src/: CMakeLists.txt  main.cpp  main_application.cpp  main_application.hpp
src/gl/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  io.cpp  io.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture.inl
